--- a/Plugins/KCC/Content/KCCSettings.json
+++ b/Plugins/KCC/Content/KCCSettings.json
@@ -4,10 +4,8 @@
 	"EngineBuild": 6705,
 	"Data": {
 	"AutoSimulation": true,
-	"Interpolate": true,
+	"Interpolate": false,
 	"CharacterInitialCapacity": 100,
-	"MoverInitialCapacity": 100,
-	"InterpolationMode": 0,
-	"DebugDisplay": true
+	"MoverInitialCapacity": 100
 }
 }
